--- a/doc/Wiki/v2.md
+++ b/doc/Wiki/v2.md
@@ -12,23 +12,23 @@ Sur cette page vous apprendrez dans l'ordre, à vous connecter à une base de do
   * [Introduction](#intro)
   * [Présentation du template](#template)
   * [Connexion au(x) base(s) de données](#database)
-  	* [PDO, DSN et instantiate()](#instantiate)
+    * [PDO, DSN et instantiate()](#instantiate)
     * [Utiliser plusieurs Database](#labels)
   * [Créer un objet ListManager](#listManager)
+  * [Construct](#construct)
   * [Modifier le comportement de ListManager](#modifs) 
     * [Changer le type de réponse](#typeReponse)
     * [Modifier le template](#modifTemplate)
     * [Système des titres](#titres)
   * [Utiliser des callbacks](#callbacks)
-  	* [Callback pour cellules](#cellCallback)
+    * [Callback pour cellules](#cellCallback)
     * [Callback pour colonnes](#columnCallback)
     * [Callback pour lignes](#rowCallback)
-  	* [Callback pour document Excel](#excelCallback)
-  * [Construct & execute](#constructExecute)
+    * [Callback pour document Excel](#excelCallback)
   * Autres classes
     * [SQLRequest](SQLRequest)
     * [RequestResponse](RequestResponse)
-  * [Gloassaire des erreurs](glossaire)
+  * [Gloassaire des erreurs](glossaire-des-erreurs)
 
 ============================================================
 
@@ -102,7 +102,7 @@ Le template par défaut de ListManager est découpé en 6 parties :
    * La gomme qui permet de remettre à zéro la recherche et le tri
  * <span style="color:green;">**En haut**</span> se trouvent les titres des colonnes, en vert. Ces titres sont composées de :
    * Une croix rouge permettant à l'utilisateur de masquer la colonne. Pour annuler le masquage d'une colonne cliquez sur l'icone en forme de masque.
-   * Le titre de la colonne cliquable : permet de trier par ordre croissant / décroissant. Pour revenir à l'ordenancement apr défaut de la liste, cliquez sur l'icône en forme de gomme.
+   * Le titre de la colonne cliquable : permet de trier par ordre croissant / décroissant. Pour revenir à l'ordenancement par défaut de la liste, cliquez sur l'icône en forme de gomme.
  * <span style="color:purple;">**Juste en dessous des titres**</span> se trouvent les champs de saisie pour la recherche par colonne. Par défaut ces cahmps sont amsqués, pour les afficher il faut cliquer une fois sur l'icône en forme de loupe (si elle est disponible, sinon c'est que la fonctionnalité de recherche est désactivée pour cette liste) 
  * **Au centre** se trouve la liste de données
  * <span style="color:blue;">**En bas**</span> se trouve le tableau de pagination qui permet à l'utilisateur de naviguer à travers les pages de résultat, en bleu.
@@ -229,6 +229,56 @@ $lm = new ListManger(null, null, array(
 
 [Home](#home)
 
+# <a name='construct'></a> Construct
+
+La méthode et *construct()* de ListManager prend en paramètre une requete SQL, puis l'exécute et retourne des résultats dans le format qui lui est indiqué par son attribut *_responseType* (modifiable par *setResponseType()*). 
+Le fonctionnement de la méthode est le suivant :
+  * 1- ListManager **récupère les données GET** correspondantes aux actions de l'utilisateur (si toutesfois elles sont activées) telles que
+    * Le tri des données (représenté par le suffixe *lm_orderBy* dans les paramètres GET)
+    * Les filtres utilisés pour la recherche (représenté par le suffixe *lm_tebSelect* dans les paramètres GET)
+    * L'export en format Excel (représenté par le suffixe *lm_excel* dans les paramètres GET)
+  * 2- A partir de ces nouvelles données ListManager modifie la requete SQL (objet SQLRequest) et y ajoute / modifie / supprime les clauses correspondantes aux actions.
+  * 3- ListManager exécute cette nouvelle requete SQL grâce à la méthode execute() de Database, et récupère l'objet de réponse RequestResponse.
+  * 4- Selon le type de données que doit retourner ListManager, la méthode prépare la réponse, et la retourne.
+
+### Paramètres
+
+La méthode prend **entre 1 et 3 paramètres** en entrée :
+
+  * **La requete SQL** : c'est le seul paramètre obligatoire, il s'agit là de la requête SQL à exécuter.
+  * **Le tableau des paramètres** : ce second paramètre permet d'insérer des paramètres varaibles de manière sécurisée dans votre requete en utilisant la méthode prepare et execeute de PDO et PDOStatement. Pour plus d'informations [consultez le manuel PHP correspondant](http://php.net/manual/fr/pdostatement.execute.php)
+  * **Le tableau des colonnes HAVING** : ce paramètre est à utiliser si votr requête à une clause **GROUP BY**. Par défaut pour filtrer les données ListManager modifie la clause *WHERE* de votre requete. Seulement pour certaines colonnes (par exemple un *COUNT* ou un *SUM*) il faut modifier la clause **HAVING**. Pour cela, précisez les colonnes concerné par ce cas dans l'array de ce 3e paramètre.
+
+### Exemple
+
+Dans l'exemple suivant nous considérons des personnes ayant un ou plusieurs comptes bancaires. Un compte est caractérisé par un ID et son solde. Nous souhaitons seléctionner toute la liste des personnes, le nombre de compte bancaires qu'ils ont et le montant total de leur(s) compte(s). Nous nous limitons aux compte dont la banque est indiquée dans les paramètre POST par l'utilisateur, ce paramètre pouvant présenter un risque d'injection SQL nous utiliserons le système 'prepare & execute' de PDO.
+
+```php 
+<?php
+// Requete SQL
+$req = new SQLRequest("SELECT p.nom, p.prenom, COUNT(c.id) as 'nb_comptes', SUM(c.solde)
+      FROM personne p JOIN compte c ON p.id = c.idProprietaire
+      WHERE c.banque = :banque
+      GROUP BY p.nom, p.prenom;");
+
+// ListManager
+$lm = new ListManager();
+
+// Paramètre variable de la requete
+$banque = $_POST['banque'];
+$vars = array(':banque' => $banque);
+
+// Les colonnes qui vont dans le HAVING sont nb_comptes et solde
+$having = array('SUM(c.solde)'      // Si pas d'alias on donne juste la colonne complete
+    'nb_comptes' => 'COUNT(c.id)'); // Si alias : l'alias devient la clé, et la colonne complete la valeur
+
+// Construct
+echo $lm->construct($req, $vars, $having);
+?>
+```
+
+[Home](#home)
+
 # <a name='modifs'></a> Modifier le comportement de ListManager
 
 Comme expliqué [précédemment](#intro) ListManager se comorte comme une **factory** : il possède un comportement de base (qui consiste à produire une lsite HTML avec toutes les fonctionnalités activées) que l'on peut modifier au moyen des setters de la classe.
@@ -309,7 +359,7 @@ $lm = new ListManager();
 // Activer le lien vers la page d'aide (ici notre page c'est Google)
 $lm->setHelpLink('http://www.google.com/');
 
-// Désactiver le lien sans passer apr le constructeur
+// Désactiver le lien sans passer par le constructeur
 $lm->setHelpLink(null);
 ?>
 ```
@@ -352,7 +402,7 @@ ListManager utilise deux types de titres pour colonnes et il est important d'en 
 
 Pour modifier les titres des colonnes qui seront affichés à l'utilisateur, utilisez la méthode *setListTitles()*. Cette méthode prend en paramètre un array associatif où la clé correspon au titre réel de la colonne, et la valur sera le titre affiché.
 
-Dans l'exemple suivant nous sélectionnons les colonnes id, a1 et a2 de la table A et colB de la table B, et nous allons tous les changer. On suppose que les colonnes de A trouvent des homologues en B, d'ou la necessité de préciser le nom de la table dans la clause SELECT, mais ce n'est aps le cas de colB.
+Dans l'exemple suivant nous sélectionnons les colonnes id, a1 et a2 de la table A et colB de la table B, et nous allons tous les changer. On suppose que les colonnes de A trouvent des homologues en B, d'ou la necessité de préciser le nom de la table dans la clause SELECT, mais ce n'est pas le cas de colB.
 L'array de ListTitles supporte en clé à la fois l'alias de la colonne et à la fois son nom complet.
 Le même système est utilisé pour masquer des colonnes. Dans l'exemple on va masquer l'id et a1 de la table a.
 ```php
@@ -597,49 +647,5 @@ Le callback pour Excel doit respecter le format suivant :
 ### Exemple
 
 TODO
-
-[Home](#home)
-
-# <a name='constructExecute'></a> Construct & execute
-
-Les méthodes *execute()* et *construct()* de la classe ont le même objectif en fonctionnement : elles prennent en paramètre une requete SQL, puis l'exécute et retourne des résultats dans le format qui lui est indiqué. La différence majeure entre les deux est que *construct()* va modifier la requête SQL que vous lui avez passé, et y rajouter un **order by** ou des conditions dans la clause **where**. Par défaut ListManager récupère les informations dans l'url (avec la variable GET) pour modifier la requete.
-Ensuite *construct()* fait appel à *execute()* pour exécuter cette nouvelle requête et retourner les résultats. 
-Ainsi, si vous ne souhaitez pas que votre requête ne soit modifiée utilisez la méthode *execute()*, sinon utilisez *construct()*.
-
-### Paramètres
-
-Ces deux méthodes prennent jusqu'à **3 paramètres** en entrée :
-
-  * **La requete SQL** : c'est le seul paramètre obligatoire, il s'agit là de la requête SQL à exécuter.
-  * **Le tableau des paramètres** : ce second paramètre permet d'insérer des paramètres varaibles de manière sécurisée dans votre requete en utilisant les méthodes prepare et execeute de PDO et PDOStatement. Pour plus d'informations [consultez le manuel PHP correspondant](http://php.net/manual/fr/pdostatement.execute.php)
-  * **Le tableau des colonnes HAVING** : ce paramètre eest à utiliser si votr requête à une clause **GROUP BY**. Par défaut pour filtrer les données ListManager modifie la clause *WHERE* de votre requete. Seulement pour certaines colonnes (par exemple un *COUNT* ou un *SUM*) il faut modifier la clause **HAVING**. Pour cela, précisez les colonnes concerné par ce cas dans l'array de cce 3e paramètre.
-
-### Exemple
-
-Dans l'exemple suivant nous considérons des personnes ayant un ou plusieurs comptes bancaires. Un compte est caractérisé par un ID et son solde. Nous souhaitons seléctionner toute la liste des personnes, le nombre de compte bancaires qu'ils ont et le montant total de leur(s) compte(s). Nous nous limitons aux compte dont la banque est indiquée dans les paramètre POST par l'utilisateur, ce paramètre pouvant présenter un risque d'injection SQL nous utiliserons le système 'prepare & execute' de PDO.
-
-```php 
-<?php
-// Requete SQL
-$req = new SQLRequest("SELECT p.nom, p.prenom, COUNT(c.id) as 'nb_comptes', SUM(c.solde)
-      FROM personne p JOIN compte c ON p.id = c.idProprietaire
-      WHERE c.banque = :banque
-      GROUP BY p.nom, p.prenom;");
-
-// ListManager
-$lm = new ListManager();
-
-// Paramètre variable de la requete
-$banque = $_POST['banque'];
-$vars = array(':banque' => $banque);
-
-// Les colonnes qui vont dans le HAVING sont nb_comptes et solde
-$having = array('SUM(c.solde)'      // Si pas d'alias on donne juste la colonne complete
-    'nb_comptes' => 'COUNT(c.id)'); // Si alias : l'alias devient la clé, et la colonne complete la valeur
-
-// Construct
-echo $lm->construct($req, $vars, $having);
-?>
-```
 
 [Home](#home)
