--- a/doc/Wiki/v2.md
+++ b/doc/Wiki/v2.md
@@ -28,7 +28,8 @@ Sur cette page vous apprendrez dans l'ordre, à vous connecter à une base de do
   * Autres classes
     * [SQLRequest](SQLRequest)
     * [RequestResponse](RequestResponse)
-  * [Gloassaire des erreurs](glossaire-des-erreurs)
+  * [Partie JavaScript](javascript)
+  * [Gloassaire des erreurs](glossaire)
 
 ============================================================
 
