Ajout de la doc de l'API + wiki

--- a/doc/Wiki/v2.md
+++ b/doc/Wiki/v2.md
@@ -28,6 +28,7 @@ Sur cette page vous apprendrez dans l'ordre, à vous connecter à une base de do
   * Autres classes
     * [SQLRequest](SQLRequest)
     * [RequestResponse](RequestResponse)
+  * [API](api)
   * [Partie JavaScript](javascript)
   * [Gloassaire des erreurs](glossaire)
 
